# edr-linux

./: .gitignore  Cargo.toml  README.md  edr.toml  rules.toml  rust-toolchain.toml
.cargo/: config.toml
edr/: Cargo.toml  build.rs
edr-agent/: Cargo.toml
edr-agent/src/: config.rs  main.rs  tests.rs
edr-agent/src/analyzer/: mod.rs  scoring.rs  sequence.rs
edr-agent/src/collector/: ebpf.rs  fanotify.rs  hasher.rs  mod.rs  network_proc.rs  proc_enricher.rs
edr-agent/src/interface/: cli.rs  mod.rs  tui.rs
edr-agent/src/response/: mod.rs
edr-agent/src/storage/: mod.rs
edr-common/: Cargo.toml
edr-common/src/: lib.rs
edr-ebpf/: Cargo.toml
edr-ebpf/src/: main.rs
edr/src/: detector.rs  events.rs  main.rs  storage.rs  tui.rs
edr/src/collector/: ebpf.rs  files.rs  mod.rs  network.rs
xtask/: Cargo.toml
xtask/src/: main.rs
