[workspace]
members = [
    "edr-common",
    "edr-agent",
    "edr-ebpf",
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# eBPF
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.2"

# Syscalls / fanotify
nix = { version = "0.27", features = ["fanotify", "fs", "process", "signal", "net"] }

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "color"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Regex
regex = "1.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }
