[workspace]
members  = ["edr", "edr-ebpf", "xtask"]
resolver = "2"

# Les profils sont définis ici pour tout le workspace
[profile.release]
opt-level = 3
lto       = true

# Profil spécifique pour le bytecode eBPF (no_std, pas de unwinding)
[profile.release-ebpf]
inherits  = "release"
panic     = "abort"
debug     = false
