[package]
name    = "edr-ebpf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "edr-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf     = "0.1"
aya-log-ebpf = "0.1"

[profile.dev]
opt-level = 3
panic     = "abort"
debug     = false

[profile.release]
opt-level = 3
panic     = "abort"
debug     = false
lto       = true
