[package]
name    = "edr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "edr"
path = "src/main.rs"

[dependencies]
# eBPF userspace loader
aya     = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
bytes = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Stockage
rusqlite = { version = "0.31", features = ["bundled"] }

# TUI
ratatui   = "0.26"
crossterm = "0.27"

# Sérialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Logs
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilitaires
anyhow  = "1"
chrono  = { version = "0.4", features = ["serde"] }
libc    = "0.2"
inotify = "0.10"
